# DeepFilterNet-VST

./: .gitmodules  README.md
.github/workflows/: ci.yml
DeepFilterNetVst/: CMakeLists.txt  DeepFilterRuntimeBridge.h  DenoiseEngine.cpp  DenoiseEngine.h  Localisation.cpp  Localisation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RuntimeAssets.cpp
DeepFilterNetVst/Localisation/: en.json  fr.json  zh-Hans.json
rust/deepfilter_runtime_bridge/: Cargo.toml
rust/deepfilter_runtime_bridge/src/: lib.rs
